# pcm-module-foerderflow

./: .env.example  .gitattributes  .gitignore  INFORMATION.md  Makefile  README.md  docker-compose.production.yml  docker-compose.yml
foerderflow-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
foerderflow-backend/alembic/: env.py
foerderflow-backend/alembic/versions/: .gitkeep  0001_initial_schema.py  0002_pcm_phase1.py  0003_pcm_tariff_softdelete.py  0004_pcm_leave_periods.py  0005_pcm_bonuses_adjustments.py  0006_pcm_audit_log.py  0007_pcm_payroll_periods.py  0008_pcm_cost_forecast.py  0009_pcm_forecast_scenarios.py  0010_pcm_vwn_config.py  0011_pcm_payroll_import.py  0012_pcm_org_bav_rate.py
foerderflow-backend/app/: main.py
foerderflow-backend/app/api/: __init__.py  router.py
foerderflow-backend/app/core/: __init__.py  config.py  errors.py  logging.py  security.py
foerderflow-backend/app/db/: __init__.py  base.py  session.py
foerderflow-backend/app/dependencies/: __init__.py  auth.py
foerderflow-backend/app/middleware/: __init__.py
foerderflow-backend/app/models/: __init__.py  _types.py  allocation.py  audit.py  auth.py  booking_rule.py  enums.py  finanzplan.py  funding.py  master.py  mittelabruf.py  organization.py  payroll.py  pcm_audit.py  pcm_bonus.py  pcm_forecast.py  pcm_import.py  pcm_leave.py  pcm_payroll.py  pcm_period.py  pcm_personnel.py  pcm_scenario.py  pcm_tariff.py  pcm_vwn.py  transaction.py
foerderflow-backend/app/permissions/: __init__.py  rbac.py
(+384 files in other folders)
